Fix overflow with new background

--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,12 @@ body {
   margin: 2rem auto;
   background-color: rgba(255, 255, 255, 0.6);
   padding: 2rem;
-  border-radius: 10px;
+  border-radius: 15px;
   width: 80%;
   min-width: 300px;
   max-width: 1400px;
+  max-height: 75vh;
+  overflow-y: auto;
 }
 
 .buttons {
